tests/ui/cilk/cilk_for_break_outside.stderr
error: cannot use `break` within cilk_for
  --> $DIR/cilk_for_break_outside.rs:11:13
   |
LL |             break 'outside;
   |             ^^^^^^^^^^^^^^

error: aborting due to 1 previous error

